# Numpad

./: .gitignore  .gitmodules  README.md
Hardware/3D_Model/Assets/: WS2812C-2020.mtl
Hardware/KiCad/Numpad/: Numpad.kicad_pcb  Numpad.kicad_prl  Numpad.kicad_pro  Numpad.kicad_sch  button-1.kicad_sch  button.kicad_sch  buttons.kicad_sch  fp-info-cache  fp-lib-table  mcu.kicad_sch  numpad.pcb3d  power-section.kicad_sch  sym-lib-table
Hardware/PCB/Assets/: Gateron-ks-33.stl  Resistor_0805.stl  USB4105-GF-A.stl
Software/: CMakeLists.txt  main.cpp
Software/src/: CMakeLists.txt  definitions.hpp  hid.cpp  hid.hpp  pixels.cpp  pixels.hpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h  utilities.cpp  utilities.hpp
